--- a/WiredBrainCoffee.EmployeeManager/Components/Pages/EmployeePages/Edit.razor
+++ b/WiredBrainCoffee.EmployeeManager/Components/Pages/EmployeePages/Edit.razor
@@ -23,19 +23,39 @@ else
                 <ValidationSummary role="alert"/>
                 <input type="hidden" name="Employee.Id" value="@Employee.Id" />
                 <div class="mb-3">
-                    <label for="firstname" class="form-label">FirstName:</label>
+                    <label for="firstname" class="form-label">First Name:</label>
                     <InputText id="firstname" @bind-Value="Employee.FirstName" class="form-control" aria-required="true"/>
                     <ValidationMessage For="() => Employee.FirstName" class="text-danger" />
                 </div>
                 <div class="mb-3">
-                    <label for="lastname" class="form-label">LastName:</label>
+                    <label for="lastname" class="form-label">Last Name:</label>
                     <InputText id="lastname" @bind-Value="Employee.LastName" class="form-control" aria-required="true"/>
                     <ValidationMessage For="() => Employee.LastName" class="text-danger" />
                 </div>
                 <div class="mb-3">
-                    <label for="isdeveloper" class="form-label">IsDeveloper:</label>
-                    <InputCheckbox id="isdeveloper" @bind-Value="Employee.IsDeveloper" class="form-check-input" aria-required="true"/>
+                    <label for="isdeveloper" class="form-label">Is Developer:</label>
+                    <InputCheckbox id="isdeveloper"
+                        @bind-Value="Employee.IsDeveloper" 
+                        class="form-check-input" 
+                        aria-required="true"/>
                     <ValidationMessage For="() => Employee.IsDeveloper" class="text-danger" />
+                </div>
+                <div class="mb-3">
+                    <label for="department" class="form-label">Department:</label>
+                    <InputSelect 
+                        id="department" 
+                        @bind-Value="Employee.DepartmentId" 
+                        class="form-select" 
+                        aria-required="true">
+                        @if(departments is not null)
+                        {
+                            @foreach (var department in departments)
+                            {
+                                <option value="@department.Id">@department.Name</option>
+                            }
+                        }
+                    </InputSelect>
+                    <ValidationMessage For="() => Employee.DepartmentId" class="text-danger" />
                 </div>
                 <button type="submit" class="btn btn-primary">Save</button>
             </EditForm>
@@ -54,11 +74,13 @@ else
     [SupplyParameterFromForm]
     private Employee? Employee { get; set; }
 
+    private Department[]? departments;
+
     protected override async Task OnInitializedAsync()
     {
         using var context = DbFactory.CreateDbContext();
         Employee ??= await context.Employee.FirstOrDefaultAsync(m => m.Id == Id);
-
+        departments = await context.Department.ToArrayAsync();
         if (Employee is null)
         {
             NavigationManager.NavigateTo("notfound");
